--- a/SPRINT 1 - React Native/1.04 Projeto ViaCEP/viaCep/package.json
+++ b/SPRINT 1 - React Native/1.04 Projeto ViaCEP/viaCep/package.json
@@ -10,14 +10,15 @@
   },
   "dependencies": {
     "@expo-google-fonts/roboto": "^0.2.3",
+    "@expo/metro-runtime": "~3.1.1",
     "@fontsource/roboto": "^5.0.8",
+    "axios": "^1.6.7",
     "expo-font": "~11.10.2",
     "expo-status-bar": "~1.11.1",
     "react": "18.2.0",
     "react-native": "0.73.2",
-    "styled-components": "^6.1.8",
     "react-native-web": "~0.19.6",
-    "@expo/metro-runtime": "~3.1.1"
+    "styled-components": "^6.1.8"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
